Name:                bsb-http-chunked
Version:             0.0.0.2
Synopsis:            Chunked HTTP transfer encoding for bytestring builders

Description:         This library contains functions for encoding [bytestring
                     builders](http://hackage.haskell.org/package/bytestring/docs/Data-ByteString-Builder.html#t:Builder)
                     for [chunked HTTP\/1.1 transfer](https://en.wikipedia.org/wiki/Chunked_transfer_encoding).
                     .
                     This functionality was extracted from
                     the [blaze-builder](http://hackage.haskell.org/package/blaze-builder)
                     package.

Author:              Jasper Van der Jeugt, Simon Meier, Leon P Smith
Copyright:           (c) 2010-2014 Simon Meier
                     (c) 2010 Jasper Van der Jeugt
                     (c) 2013-2015 Leon P Smith
Maintainer:          Simon Jakobi <simon.jakobi@gmail.com>

License:             BSD3
License-file:        LICENSE

Homepage:            http://github.com/sjakobi/bsb-http-chunked
Bug-Reports:         http://github.com/sjakobi/bsb-http-chunked/issues
Stability:           Provisional

Category:            Data, Network
Build-type:          Simple
Cabal-version:       >= 1.8

Extra-source-files:  CHANGELOG.md

Source-repository head
  Type: git
  Location: https://github.com/sjakobi/bsb-http-chunked.git

Library
  exposed-modules:   Data.ByteString.Builder.HTTP.Chunked
  build-depends:     base >= 4.3 && < 4.12,
                     bytestring >= 0.9 && < 0.11,
                     bytestring-builder < 0.11
  ghc-options:       -Wall
  if impl(ghc >= 8.0)
    ghc-options:     -Wcompat

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends:   attoparsec
                 , base
                 , bsb-http-chunked
                 , bytestring
                 , bytestring-builder
                 , hedgehog
                 , tasty
                 , tasty-expected-failure
                 , tasty-hedgehog
                 , tasty-hunit
  ghc-options: -Wall -rtsopts
  if impl(ghc < 7.10)
    buildable: False
